Finally Done(Before the finals)

--- a/backmatter/appendix/appendix.tex
+++ b/backmatter/appendix/appendix.tex
@@ -1,7 +1,7 @@
 \begin{landscape}
 \appendix
-\chapter{appendix}
-\section{R2RSRV}
+\chapter{Appendix}
+\section{R2RSRV} 
 \begin{table}[H]
     \centering
     \small  
