--- a/mainmatter/4-Results/results.tex
+++ b/mainmatter/4-Results/results.tex
@@ -287,11 +287,11 @@ Table \ref{table:results} shows that the optimal filter window size under all se
 The Figures \ref{fig:ci_curve}, \ref{fig:ci_curve_2} show that only S1 is a valid model. The dropout used improves the training for setting S1 only, that's why other settings S2, S3 and S4 have validation c-index score always higher than training c-index scores.
 
 The comparison between the scores evaluated in same dataset has been compared and presented in table \ref{table:results_comparison} \citep{ozturk2018deepdta}. The benchmark dataset is publicly available in Journal of Chemical Information and Modeling \citep{Tang2013,He2017}.
-
+% \vspace*{-.2cm}
 \begin{table}[H] 
     \centering
-    \caption[Results Comparison]{Comparison of performace in prediction scores of protein-drug interaction problem. The performance of other algorithms is retrieved from literature~\citep{ozturk2018deepdta}. The method from this research is represented by FeatDTI. It performs the best amongst all the predictors, with the closest predictor being the DeepDTA.}
-    \label{table:results_comparison}
+    \caption[Results Comparison]{Comparison of performance: the performance of other algorithms is retrieved from literature~\citep{ozturk2018deepdta}. The method from the research is FeatDTI. It performs the best amongst all the predictors, with the closest predictor being the DeepDTA.}
+    \label {table:results_comparison}
     \begin{tabular}{|l|c|c|r|r|}
         \hline
         
