--- a/mainmatter/1-Introduction/introduction.tex
+++ b/mainmatter/1-Introduction/introduction.tex
@@ -57,7 +57,7 @@ The objectives of the research are:
 \begin{itemize}
     \setlength\parindent{36pt}
     \item To determine the effective feature matrices related to protein.
-    \item To design a deep learning architecture using \acrfull{cnn} for predicting the protein-drug interactions.
+    \item To modify DeepDTA - a deep learning architecture using \acrfull{cnn} for predicting the protein-drug interactions.
 \end{itemize}
 
 \section{Scope of Work}
