--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 
 %%%%%%%%%%%%%%%%% DOCUMENT TYPE DEFINITION
 
-\documentclass[openright, hidelinks, a4paper, twoside, openany, 12pt]{report} 
+\documentclass[openright, hidelinks, a4paper, oneside, openany, 12pt]{report} 
 
 %%%%%%%%%%%%%%%%% END OF DOCUMENT TYPE DEFINITION
 \input{self_package.tex}
@@ -128,6 +128,7 @@
 \listoftables
 }
 \thispagestyle{empty}
+
 
 \addtocontents{toc}{~\hfill\textbf{Page}\par}
 \addtocontents{lof}{~\hfill\textbf{Page}\par}
