--- a/self_config.tex
+++ b/self_config.tex
@@ -8,7 +8,7 @@
 %     \titlespacing*{\chapter}{0pt}{-19pt}{0pt}
 
 \titleformat{\chapter}[hang]
-  {\normalfont\normalsize\bfseries}
+  {\centering\normalfont\normalsize\bfseries}
   {\MakeUppercase{chapter \NUMBERstring{chapter} :} \: }
   {12pt}
   {\MakeUppercase}
