finals made the toc and tof

--- a/bibliography/__latexindent_temp.tex
+++ b/bibliography/__latexindent_temp.tex
@@ -1,14 +1,1 @@
-@article{Hecker2012,
-author = {Hecker, N. and Ahmed, J. and von Eichborn, J. and Dunkel, M. and Macha, K. and Eckert, A. and Gilson, M. K. and Bourne, P. E. and Preissner, R.},
-doi = {10.1093/nar/gkr912},
-issn = {0305-1048},
-journal = {Nucleic Acids Res.},
-mendeley-groups = {Protein{\_}Drug{\_}Interaction},
-month = {jan},
-number = {D1},
-pages = {D1113--D1117},
-title = {{SuperTarget goes quantitative: update on drug-target interactions}},
-url = {https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkr912},
-volume = {40},
-year = {2012}
-}
+(Institute of Engineering/Pulchowk Campus)
