fancy Header Removed

--- a/configs.tex
+++ b/configs.tex
@@ -1,7 +1,6 @@
 %%%%%%%%%%%%%%%%% PACKAGES
 
 % \usepackage[english]{babel}  % Last language is the documents standard one.
-\usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{listings}
 \usepackage{hyperref}
@@ -13,7 +12,7 @@
 \usepackage{subfig}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{color}
-\usepackage[a4paper,top=2.5cm,bottom=2.5cm,left=3.5cm,right=2.5cm,marginparwidth=1.75cm]{geometry}
+\usepackage[a4paper,top=2.54cm,bottom=2.54cm,left=3.81cm,right=2.54cm,marginparwidth=1.75cm]{geometry}
 % \usepackage [ Bjornstrup ]{ fncychap }
 % \usepackage{nomencl} % Nomenclature
 % \makenomenclature
@@ -53,7 +52,7 @@
 %%%%%%%%%%%%%%%%% HEADINGS CONFIGURATION
 
 \usepackage{fancyhdr}
-\pagestyle{fancy}
+% \pagestyle{fancy}
 % \fancyhead[LE,RO]{\textsl{\rightmark}}
 % \fancyhead[LO,RE]{\textsl{\leftmark}}
 
@@ -150,3 +149,4 @@
 
 \newcommand{\campusaddress}{Lalitpur, Nepal}
 
+% \hyphenpenalty=100000
