Removed Fancy Headers

--- a/backmatter/appendix/appendix.tex
+++ b/backmatter/appendix/appendix.tex
@@ -3,11 +3,11 @@
 \chapter{Appendix}
 \section{R2RSRV} 
 \begin{table}[H]
-    \centering
+    \centering 
     \small  
     \setlength{\tabcolsep}{1pt}\iffalse
     \begin{tabular}{p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}p{.8cm}}
-        \fi \caption[]{R2RSRV Matrix}
+        \fi \caption[R2RSRV]{R2RSRV Matrix}
         \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
             \hline
             &I&V&L&F&C&M&A&G&T&S&W&Y&P&H&E&Q&D&N&K&R\\ \toprule \hline
@@ -35,7 +35,8 @@
     \end{tabular}
     \label{table:r2r} 
 \end{table}
-
+\end{landscape}
+\begin{landscape}
 \section{Proteins Description}
 \begin{table}[H]
     \caption[Protein Description]{Description of proteins used in the thesis work. Source: https://www.ncbi.nlm.nih.gov/pubmed/ }
@@ -51,13 +52,14 @@
         \end{longtable}
     
 \end{table}
-
+\end{landscape}
+\begin{landscape}
 \section{Drugs Description}
 
 \begin{table}[H]
     \centering
     \caption{Description of Drug Compounds.}
-    \begin{longtable}{|p{1.5cm}|p{3.7cm}|p{7cm}|p{1.5cm}|}
+    \begin{longtable}{|p{3.0cm}|p{3.7cm}|p{7cm}|p{1.5cm}|}
     \hline
     
     Drug & Chemical Formula & Description  & Drug Bank ID \\ \hline
@@ -66,5 +68,4 @@
     
     \end{longtable}
 \end{table}
-
 \end{landscape}
