--- a/frontmatter/5-acknowledges.tex
+++ b/frontmatter/5-acknowledges.tex
@@ -5,7 +5,7 @@ I would like to express the deepest appreciation to my supervisor and Head of De
 
 I pay my sincere gratitude to Dr. Aman Shakya, MSCSKE Coordinator for his supervision and help during this research work.
 
-I am highly grateful to Prof. Dr. Shashidhar Ram Joshi, Prof. Dr. Subarna Shakya, Dr. Sanjeeb Prasad Pandey, Dr. Dibakar Raj Pant and Dr. Basanta Joshi for their encouragement and guidance.
+I am highly grateful to Prof. Dr. Shashidhar Ram Joshi, Prof. Dr. Subarna Shakya, Dr. Sanjeeb Prasad Panday, Dr. Dibakar Raj Pant and Dr. Basanta Joshi for their encouragement and guidance.
 
 I would like to express my heartily gratitude towards the \myinstitute, \mycampus ~along with all my respected teachers, my friends, my family for giving me continuous support for their invaluable help.
 
