--- a/frontmatter/titlepages/dissertation.tex
+++ b/frontmatter/titlepages/dissertation.tex
@@ -1,9 +1,9 @@
 \begin{titlepage}
 
 \begin{center}
-\includegraphics[height = 4cm]{frontmatter/images/tu.jpg} 
+\includegraphics[height = 2.6cm]{frontmatter/images/tu.jpg} 
 
-\linespread{1}
+\linespread{1.5}
 
 \bf{
     \vspace{0.5cm}
@@ -11,38 +11,53 @@
 \MakeUppercase{\myuniversity}
     % \vspace{0.3cm}
 
-\MakeUppercase{\myinstitute, \mycampus }
+\MakeUppercase{\myinstitute}
 
-\MakeUppercase{ \campusaddress}
-\begin{flushleft}
-    \roll    
-\end{flushleft}
+\MakeUppercase{\mycampus }
 
-
-% \mysubtitle
-
+% \MakeUppercase{ \campusaddress}
 \vspace{1cm}
 
-{\lat \MakeUppercase{\large{\thetitle}}}\\
+\begin{flushleft}
+   \MakeUppercase{thesis no.: \roll } 
+
+   
+\end{flushleft}
+
+{\thetitle}
+% \mysubtitle
+
+% \vspace{1cm}
+
+% {\lat \large{\thetitle}}\\
 
 
-\vspace{.5cm}
-{BY}
+
+\vspace{1cm}
+{by}
  
-\MakeUppercase{\theauthor}
+\theauthor
 
-\vspace{.5cm}
+\vspace{1cm}
 
 % {Supervisor} \\
 % \myadvisorA
 
-\vspace{4cm}
+\vspace{1cm}
 
 % {\em This Thesis is carried out as a part of the education at the \myuniversity \: and is therefore approved as a part of this education. However, this does not imply that the University answers for the methods that are used or the conclusions that are drawn.}
-{SUBMITTED TO THE DEPARTMENT OF ELECTRONICS AND
+{A THESIS  
+
+SUBMITTED TO THE DEPARTMENT OF ELECTRONICS AND
 COMPUTER ENGINEERING IN PARTIAL FULFILLMENT OF THE REQUIREMENT FOR THE DEGREE OF MASTER OF SCIENCE IN COMPUTER SCIENCE AND KNOWLEDGE ENGINEERING
 }
-\vspace{2cm}
+\vspace{1cm}
+
+\MakeUppercase{\mydepartment}
+
+\MakeUppercase{\campusaddress}
+
+\vspace{1cm}
 
 NOVEMBER,
 \thedate
