--- a/mainmatter/1-Introduction/introduction.tex
+++ b/mainmatter/1-Introduction/introduction.tex
@@ -3,12 +3,12 @@
 \section{Background}
 Treatment of diseases are mostly associated with applying foreign medicinal components into human body. The rudimentary means of curing diseases has been growing with applied ayurbedas since the past. The chemical perspective of curing diseases slowly evolved into modern chemistry as drug facilities developed around the globe. The extensive research and documentation changed the world where people have come to trust fully in chemist's drugs to mitigate the ailments in the body. With the growing chemical interest in the community, the need to develop better drugs and quick solutions increased even higher. With the identification of new diseases and dire need of understanding the mechanism to cure such diseases, the drug research started gaining its speed.
 
-~\acrfull{cadd} mechanism have been developing bio-informatics ever since the "Next Industrial Revolution" possibilities started grow~\citep{Leelananda2016,Brown2017}. The interest started as Fortune magazine published the article "Designing Drugs by Computer at Merk". Experimenting with computational power and technical human resources in biomedicine, the concepts started to form scopes like \acrfull{hts} -- A technique to screen desired drugs from other drugs. \acrshort{hts} was evolving eventually to find precedence over finding novel therapeutics. The desire to increase high hit rate did grow as the traditional \acrshort{hts} led to few probable leads. As research developed on computational drug design, \acrshort{cadd} study broadened based on the computational resources required. ~\acrshort{cadd} can be classified into two general categories: Structure-based \acrshort{cadd} and Ligand-based~\acrshort{cadd}.
+~\acrfull{cadd} mechanism have been developing in bio-informatics ever since the "Next Industrial Revolution" possibilities started grow~\citep{Leelananda2016,Brown2017}. The interest started as Fortune magazine published the article "Designing Drugs by Computer at Merk". Experimenting with computational power and technical human resources in biomedicine, the concepts started to form scopes like \acrfull{hts} -- A technique to screen desired drugs from other drugs. \acrshort{hts} was evolving eventually to find precedence over finding novel therapeutics. The desire to increase high hit rate did grow as the traditional \acrshort{hts} led to few probable leads. As research developed on computational drug design, \acrshort{cadd} study broadened based on the computational resources required. ~\acrshort{cadd} can be classified into two general categories: Structure-based \acrshort{cadd} and Ligand-based~\acrshort{cadd}.
 
 Structure based \acrshort{cadd} relies on knowledge of structural analysis of protein structures in particular to identify the drug leads. It associates to phenomenons like Binding Site Analyses, Docking Simulations, and Scoring Algorithms. In brief, all the structural properties of proteins are exploited to identify the possible drug candidates -- the molecules which fit in the protein structure description. This work borrows the representational feature sets of proteins and drugs from this discipline.
 
 %Target Structure Preparation, binding site detection, representation for docking simulations, scoring functions, sampling algorithms for docking,HTS, Site Characterization, Parmacophore model.  
-
+ 
 Ligand-based \acrshort{cadd} exploits similarities of known active and inactive molecules. It further exploits the chemical, electrical and functional properties from drugs and proteins. This work borrows the feature representations of chemical-electrical properties in the form of \acrfull{srv}.
 
 %Descriptors, Similarity Search Molecular, QSAR model, Pharmacophore, Prediction to Optimization
@@ -45,7 +45,7 @@ The simple technique of encoding the sequence information of drugs and proteins 
 
 \subsection{Selection of Prediction Score}
 
-Out of the many score functions; STITCH, Davis, Metz\_Anastassiadis and KIBA scores, KIBA scores were used for the prediction of drug and protein interaction problem. The main reasons are: STITCH scores don't fully explore the primary thermodynamic dissociation constants used for drug-target interaction profile. The information of other scores are present in KIBA~\citep{Tang2013}, as shown in section~\ref{section:kiba}. Again, KIBA scores dataset is sourced from multiple databases \citep{Kanehisa2000}, \citep{Wishart2018}, \citep{Hecker2012} and \citep{Sharma2010} a consists of experimental data and secondary data (from literature) of drug-target interaction. Choosing the KIBA as the output score for two protein and drug sequences, we model our machine learning algorithm for prediction of interaction.
+The research explored different score functions used to predict the interaction of drug and protein. Among STITCH, Davis, Metz\_Anastassiadis and KIBA scores, KIBA scores were used for the prediction of drug and protein interaction problem. The main reasons are: STITCH scores don't fully explore the primary thermodynamic dissociation constants used for drug-target interaction profile. The information of other scores are present in KIBA~\citep{Tang2013}, as shown in section~\ref{section:kiba}. Again, KIBA scores dataset is sourced from multiple databases \citep{Kanehisa2000}, \citep{Wishart2018}, \citep{Hecker2012} and \citep{Sharma2010} a consists of experimental data and secondary data (from literature) of drug-target interaction. Choosing the KIBA as the output score for two protein and drug sequences, we model our machine learning algorithm for prediction of interaction.
 
 \subsection{Selection of Features}
 
@@ -64,7 +64,7 @@ The objectives of the research are:
 
 
 \subsection{Choosing Method of Interaction}
-Out of the two methods of contact prediction: Global Methods and Local Methods, where Global Method tries to predict the label of one residue pair considering the label of others while Local Method tries to predict the label of one residue pair without considering the label of others; we use Global Methods as a means of contact prediction. We try to run different variations in Residual Methods: Using Distance Prediction, Coevolutionary features, Sequence Representation. 
+The work explored two popular techniques used in prediction problem: Global Methods and Local Methods. Global Method tries to predict the label of one residue pair considering the label of others while Local Method tries to predict the label of one residue pair without considering the label of others. The work used Global Methods as a means of protein-drug interaction prediction. It tried to run different variations in Residual Methods: Using Distance Prediction, Coevolutionary features, Sequence Representation. 
 
 \iffalse
 \subsection{Creating Analogy with Image}
