--- a/mainmatter/3-Methodology/images/dense.tex
+++ b/mainmatter/3-Methodology/images/dense.tex
@@ -1,7 +1,7 @@
 \begin{figure}[H]
     \centering
     % \includegraphics[width=.5\linewidth]{mainmatter/3-Methodology/images/dense.png}
-    \captionsetup{justification=centering,margin=2cm}
+    % \captionsetup{justification=centering,margin=0cm}
 
 \begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=2.8cm,
     semithick]
@@ -42,8 +42,6 @@
 \end{tikzpicture}
 
   
-\caption[Dense Layer]{
-    The input nodes are represented by \textit{x} and the weights \textit{h} are applied to each values of input nodes to generate an output
-}
+\caption[Dense Layer]{The input nodes are represented by \textit{x} and the weights \textit{h} are applied to each values of input nodes to generate an output. The output is the blended value of input activations with the model's weight functions}
 \label{fig:dense}
 \end{figure}
