--- a/mainmatter/3-Methodology/sections/kiba.tex
+++ b/mainmatter/3-Methodology/sections/kiba.tex
@@ -51,5 +51,5 @@ All the bioactivity types are available from CHEMBL\citep{Gaulton2017}. Based on
   \label{fig:interactions_summary}
   \centering
   \includegraphics[width=.7\textwidth]{dataset/images/interactions_summary.png}
-  \caption{Bar Chart: Interactions of available dataset}
+  \caption{Bar Chart of interactions available in dataset}
 \end{figure}
