--- a/mainmatter/3-Methodology/sections/pssm.tex
+++ b/mainmatter/3-Methodology/sections/pssm.tex
@@ -9,6 +9,7 @@
   \label{table:PSSM_Analysis}
     \subfloat[][Protein FASTA Sequence (Motifs)]{
       \label{table:PSSM_Analysis:fasta} 
+      % \subcaption{10 assumed protein fasta sequences. Their lengths is equal to 9 for this example.}
       \begin{tabular}{|l|l|} \toprule
       \hline
       1 & GAGGTAAAC \\ \hline
