--- a/mainmatter/5-Conclusion/conclusion.tex
+++ b/mainmatter/5-Conclusion/conclusion.tex
@@ -1,6 +1,6 @@
 \chapter{Conclusions and Recommendations}
 
-The research was conducted for series of experiments using different CNN architectures and validated using four different settings of drug and protein combinations. The experiments show that the network required past knowledge on proteins and drugs to yield the best results. The model would yield best scores when both the protein and drug were present in the training phase. We also conclude that if the domain has fewer parameters to learn from, we can represent them in new dimensions to achieve better results in machine learning problem.The research work concludes with two major statements.
+The research was conducted for series of experiments using different CNN architectures and validated using four different settings of drug and protein combinations. The experiments show that the network required past knowledge on proteins and drugs to yield the best results. The model would yield best scores when both the protein and drug were present in the training phase. We also conclude that if the domain has fewer parameters to learn from, we can represent them in new dimensions to achieve better results in machine learning problem.
 
 \section{Conclusions}
 % \begin{itemize}
