--- a/self_package.tex
+++ b/self_package.tex
@@ -8,5 +8,6 @@
 \makeglossaries
 
 \usepackage{longtable}
+\usepackage[utf8x]{inputenc}
 \usepackage{csquotes}
-\usepackage{hyperref,url} 
+\usepackage{hyperref,url}
